--- a/recast_interface_templates/recast_analysis.html
+++ b/recast_interface_templates/recast_analysis.html
@@ -14,10 +14,8 @@ $(document).ready(function(){
 </div>    
 
 <div class="row">
-    <div class="col-md-6">
-      <div class="panel-heading">
-        <h3 class="panel-title">Analysis Details</h3>
-      </div>
+    <h2>Analysis Details</h2>
+    <div class="col-md-10">
       <div class="panel-body">
         <dl class="dl-horizontal">
         {% for key,value in analysis_info.iteritems() %}
