--- a/recast_interface_templates/recast_analysis.html
+++ b/recast_interface_templates/recast_analysis.html
@@ -3,6 +3,43 @@
 {% block prebody %}
 <script type="text/javascript">
 $(document).ready(function(){
+    {% if not analysis_implemented %}
+    $('#create-request-dialog-btn').addClass('disabled')
+    {% endif %}
+    $('#create-request-dialog-btn').click(function(){
+       $('#newrequestmodal').modal() 
+    })
+    $('#create-request-btn').click(function(){
+       //close create request modal
+
+       if($('#title').val().length == 0){
+           $('#title').parent().addClass('has-error')
+           return;
+       }
+
+       $('#newrequestmodal').modal('hide') 
+
+       //grab all form data  
+        var formData = new FormData($('#request-form')[0]);
+ 
+        $.ajax({
+          url: location.origin+'/recast/createRequest',
+          type: 'POST',
+          data: formData,
+          async: false,
+          cache: false,
+          contentType: false,
+          processData: false,
+          success: function (response) {
+            var requestId = response['requestId']
+            console.log('created request: ' + requestId)
+            $('#requestId').html(requestId)
+            $('#showrequest-btn').click(function(){location.href = location.origin + '/recast/request/' + requestId})            
+            $('#successmodal').modal()
+          }
+        });
+
+    })
 });
 </script>
 
@@ -26,5 +63,67 @@ $(document).ready(function(){
       </div>
     </div>
 </div>
+
+<div class="row">
+    <button type="button" class="btn btn-default" id="create-request-dialog-btn">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span>New RECAST Request</span>
+    </button>
+</div>
+
+<div id="newrequestmodal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">New RECAST Request</h4>
+      </div>
+      <div class="modal-body">
+        <p>Once the RECAST request is created, please add input files for parameter points on the request page.</p>
+
+        <form action="createRequest" id="request-form">
+          <input value="{{analysis_info['uuid']}}" name="analysis-uuid" type="text" class="form-control hidden">
+         <div class="form-group">
+            <label for="username">Username</label>
+            <input value="lheinric" name="username" type="username" class="form-control" id="username" placeholder="Username">
+          </div>
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input name="title" type="title" class="form-control" id="title" placeholder="Title" required>
+          </div>
+          <div class="form-group">
+            <label for="title">Predefined Model</label>
+            <input value="CMSSM" name="predefined-model" type="text" class="form-control" id="model" placeholder="Predefined Model">
+          </div>
+          <div class="form-group">
+            <label for="title">Model type</label>
+            <input value="SUSY" name="model-type" type="text" class="form-control" id="model-type" placeholder="Model type">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="create-request-btn">Create Request</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div id="successmodal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Success!</h4>
+      </div>
+      <div class="modal-body">
+        <p>Created request with id: <span id='requestId'>NaN</span></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="showrequest-btn">Show Request</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 {% endblock %}
