--- a/recast_interface_templates/recast_all_analyses.html
+++ b/recast_interface_templates/recast_all_analyses.html
@@ -31,6 +31,7 @@
             <tr>
                 <th>Collaboration</th>
                 <th>Title</th>
+                <th>Available Backends</th>
             </tr>
         </thead>
         <tbody>
@@ -38,6 +39,11 @@
                     <tr>
                         <td>{{row['collaboration']}}</td>
                         <td><a href="/recast/analysis/{{row['uuid']}}">{{row['title']}}</a></td>
+                        <td>
+                            {% for backend in backends[row['uuid']] %}
+                                <span class="label label-default">{{backend}}</span>
+                            {% endfor %}
+                        </td>
                     </tr>
             {% endfor %}
         </tbody>
