--- a/recast_interface_templates/recast_request.html
+++ b/recast_interface_templates/recast_request.html
@@ -60,7 +60,7 @@ $(document).ready(function(){
 
                 console.log('got jobguid: '+jobguid)
                 console.log('task ids of chain are: '+jobguid)
-                //window.location.assign(location.origin+'/monitor/' + jobguid)
+                window.location.assign(location.origin+'/monitor/' + jobguid)
             }
         })
     
