disable zenodo if no results

--- a/recastcontrolcenter/recast_interface_templates/recast_request.html
+++ b/recastcontrolcenter/recast_interface_templates/recast_request.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
             requestResultsAvailable = data['responseJSON']['resultsAvailable']
             if(!requestResultsAvailable){
                 $('#upload-response-btn').addClass('disabled')
-                // $('#upload-zenodo-response-btn').addClass('disabled')
+                $('#upload-zenodo-response-btn').addClass('disabled')
             }                    
         }
     })
