--- a/recastcontrolcenter/recast_interface_templates/recast_all_requests.html
+++ b/recastcontrolcenter/recast_interface_templates/recast_all_requests.html
@@ -35,6 +35,11 @@
             {% for row in requests_info %}
               <tr>
                 <td><a href=/recast/request/{{row['id']}}>{{row['title']}}</a></td>
+                <td>
+                  {% for b in backend_data[row['id']] %}
+                    <span class="label label-default"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span>{{b}}</span>
+                  {% endfor %}
+                </td>
               </tr>
             {% endfor %}
         </tbody>
