--- a/recastcontrolcenter/recast_interface_templates/recast_request.html
+++ b/recastcontrolcenter/recast_interface_templates/recast_request.html
@@ -3,10 +3,6 @@
 {% block prebody %}
 <script type="text/javascript">
 $(document).ready(function(){
-    $('#upload-response-btn').click(function(){
-      console.log('this would be uploading the response')
-    })
-
     $('.process-btn').click(function(){
         basicreqid = $(this).attr('data-basic-req-id')
         backend = $(this).attr('data-backend')
@@ -59,15 +55,28 @@ $(document).ready(function(){
     {% endif %}
 
 
+    $('.upload-response-btn').click(function(){
+      var button = $(this)
+      $.ajax(location.origin+'/recast/uploadPointResponse?'+$.param({
+        scanreqid: {{request_info['id']}},
+        basicreqid: button.attr('data-basic-req-id'),
+        pointreqid: button.attr('data-point-req-id')
+      }),{
+          async: false,
+          complete: function(data){
+              console.log(data['responseJSON'])
+          }
+      })
+    })
 });
 
-function togglejobs(basireqid){
-  $('#basicreq_jobs_'+basireqid).toggleClass('hidden')
-  if ($('#basicreq_jobs_2').hasClass('hidden')){
-    $('#jobslabel_2').html('Show Processings')
+function togglejobs(basicreqid){
+  $('#basicreq_jobs_'+basicreqid).toggleClass('hidden')
+  if ($('#basicreq_jobs_'+basicreqid).hasClass('hidden')){
+    $('#jobslabel_'+basicreqid).html('Show Processings')
   }
   else{
-    $('#jobslabel_2').html('Hide Processings')
+    $('#jobslabel_'+basicreqid).html('Hide Processings')
   }
 }
 </script>
@@ -112,7 +121,7 @@ function togglejobs(basireqid){
         <div class="panel-heading" role="tab" id="heading_{{loop.index}}">
           <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse_{{loop.index}}" aria-expanded="true" aria-controls="collapse_{{loop.index}}">
-              Parameter Point {{loop.index}}
+              Parameter Point {{loop.index}}, {{pp['id']}}
             </a>
           </h4>
         </div>
@@ -122,7 +131,7 @@ function togglejobs(basireqid){
             <ul class="list-group">
               {% for br in basic_req_data[pp['id']] %}
                 <li class="list-group-item">
-                    <strong>Basic Request {{loop.index}}: </strong>
+                    <strong>Basic Request {{loop.index}} {{br['id']}}: </strong>
                     <!-- The UI buttons -->
                     <span>
                     <!-- Single button -->
@@ -136,7 +145,7 @@ function togglejobs(basireqid){
                       {% endfor %}
                       </ul>
                     </div>
-                    <button id="upload-response-btn"type="button" class="btn btn-primary btn-xs" aria-label="Left Align" onclick="togglejobs({{br['id']}})">
+                    <button id="show-jobs-btn"type="button" class="btn btn-primary btn-xs" aria-label="Left Align" onclick="togglejobs({{br['id']}})">
                       <span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:1em"></span><span id="jobslabel_{{br['id']}}">Show Processings</span>
                     </button>
                     <!-- Single button -->
@@ -150,7 +159,8 @@ function togglejobs(basireqid){
                       {% endfor %}
                       </ul>
                     </div>
-                    <button id="upload-response-btn"type="button" class="btn btn-primary btn-xs" aria-label="Left Align">
+                    <button type="button" data-basic-req-id="{{br['id']}}" data-point-req-id="{{pp['id']}}"
+                    class="btn btn-primary btn-xs upload-response-btn" aria-label="Left Align">
                       <span class="glyphicon glyphicon-upload" aria-hidden="true" style="margin-right:1em"></span><span>Upload to RECAST</span>
                     </button>
                   </span>
